ARM/Networking/Site2/af_vnet_azuredeploy2_hbiB.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {

    "commentLocation": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters for the deployment template filter on VNET301"
    },
    "commentVNET": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from VNET tab, filter on VNET301"
    },
    "commentSubnet": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from subnet tab, filter on VNET301"
    },
    "commentConnections": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Connection tab, filter on VNET301"
    },
    "commentGateway": {
      "type": "string",
      "defaultValue": "using the metadata template to populate the parameters from Gateway tab, filter on VNET301"
    },
    "baseUrl": {
      "defaultValue": "https://github.com/willstg/AzureFoundation/tree/master/arm/vnet/site1",
      "type": "string",
      "metadata": {
        "artifactsBaseUrl": "",
        "description": "URL to acquire other templates"
      }
      /*in the metadata spreadsheet, select the VNET tab and filter on VNET201
    and select the columns with Template in the name grouped by color.*/
    },
    "locationName": {
      "type": "string",
      "defaultValue": "westus2"
    },
    "resourceGroupName": {
      "type": "string",
      "defaultValue": "rg_vnet_hbi_w2"
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "vnet_hbi_w2",
      "metadata": { "description": "AzureFoundation VNET Name for virtual data center subscription in a specific data center." }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.128.80.0/20",
      "metadata": { "description": "AzureFoundation VNET Address Prefix, the range of addresses for a specific data center." }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [ "10.128.59.36" ],
      "metadata": { "description": "AzureFoundation Domain Controller DNS server" }
    },


    /*in the metadata spreadsheet, select the Subnet tab and filter on VNET201
    and select the columns with Template in the name grouped by color.*/
  "subnet310Prefix": { "type":  "string", "defaultValue":  "10.128.96.0/25", "metadata":  {"description": "HTTP and HTTPS services"}},	"subnet310Name": { "type":  "string", "defaultValue":  "s310_Web_Test_slgmac_W2", "metadata":  {"description": "HTTP and HTTPS services"}},		"subnet310NSG": { "type": "string", "defaultValue": "310_NSG_Web", "metadata": {"description": "NSG: HTTP and HTTPS services"}},	
"subnet315Prefix": { "type":  "string", "defaultValue":  "10.128.96.128/25", "metadata":  {"description": "Loadbalanced HTTP and HTTPS Services"}},	"subnet315Name": { "type":  "string", "defaultValue":  "s315_LB_Web_Test_slgmac_W2", "metadata":  {"description": "Loadbalanced HTTP and HTTPS Services"}},		"subnet315NSG": { "type": "string", "defaultValue": "315_NSG_LB_Web", "metadata": {"description": "NSG: Loadbalanced HTTP and HTTPS Services"}},	
"subnet320Prefix": { "type":  "string", "defaultValue":  "10.128.97.0/25", "metadata":  {"description": "Web Services, OEM applications"}},	"subnet320Name": { "type":  "string", "defaultValue":  "s320_App_Test_slgmac_W2", "metadata":  {"description": "Web Services, OEM applications"}},		"subnet320NSG": { "type": "string", "defaultValue": "320_NSG_App", "metadata": {"description": "NSG: Web Services, OEM applications"}},	
"subnet325Prefix": { "type":  "string", "defaultValue":  "10.128.97.128/25", "metadata":  {"description": "Loadbalaned Web Services, OEM applications"}},	"subnet325Name": { "type":  "string", "defaultValue":  "s325_LB_App_Test_slgmac_W2", "metadata":  {"description": "Loadbalaned Web Services, OEM applications"}},		"subnet325NSG": { "type": "string", "defaultValue": "325_NSG_LB_App", "metadata": {"description": "NSG: Loadbalaned Web Services, OEM applications"}},	
"subnet330Prefix": { "type":  "string", "defaultValue":  "10.128.98.0/25", "metadata":  {"description": "Data for Applications"}},	"subnet330Name": { "type":  "string", "defaultValue":  "s330_DB_Test_slgmac_W2", "metadata":  {"description": "Data for Applications"}},		"subnet330NSG": { "type": "string", "defaultValue": "330_NSG_DB", "metadata": {"description": "NSG: Data for Applications"}},	
"subnet335Prefix": { "type":  "string", "defaultValue":  "10.128.98.128/25", "metadata":  {"description": "Loadbalanced Databases"}},	"subnet335Name": { "type":  "string", "defaultValue":  "s335_LB_DB_Test_slgmac_W2", "metadata":  {"description": "Loadbalanced Databases"}},		"subnet335NSG": { "type": "string", "defaultValue": "335_NSG_LB_DB", "metadata": {"description": "NSG: Loadbalanced Databases"}},	
"subnet350Prefix": { "type":  "string", "defaultValue":  "10.128.99.0/25", "metadata":  {"description": "Internet EndPoint Machines"}},	"subnet350Name": { "type":  "string", "defaultValue":  "s350_DMZ_Test_slgmac_W2", "metadata":  {"description": "Internet EndPoint Machines"}},		"subnet350NSG": { "type": "string", "defaultValue": "350_NSG_DMZ", "metadata": {"description": "NSG: Internet EndPoint Machines"}},	
"subnet355Prefix": { "type":  "string", "defaultValue":  "10.128.99.128/25", "metadata":  {"description": "Loadbalaned Internet Endpoint systems"}},	"subnet355Name": { "type":  "string", "defaultValue":  "s355_LB_DMZ_Test_slgmac_W2", "metadata":  {"description": "Loadbalaned Internet Endpoint systems"}},		"subnet355NSG": { "type": "string", "defaultValue": "355_NSG_LB_DMZ", "metadata": {"description": "NSG: Loadbalaned Internet Endpoint systems"}},	
"subnet360Prefix": { "type":  "string", "defaultValue":  "10.128.100.0/25", "metadata":  {"description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other"}},	"subnet360Name" [...]
"subnet361Prefix": { "type":  "string", "defaultValue":  "10.128.100.128/25", "metadata":  {"description": "Tier 1 administrator - manage enterprise servers, services, and applications"}},	"subnet361Name": { "type":  "string", "defaultValue":  "s361_User_Tier1_Test_slgmac_W2", "metadata":  {"description": "Tier 1 administrator - manage enterprise servers, services, and applications"}},		"subnet361NSG": { "type": "string", "defaultValue": "361_NSG_User_Tier1", "metadata": {"description": "NSG: Ti [...]
    "subnet362Prefix": {
      "type": "string",
      "defaultValue": "10.128.101.0/25",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet362Name": {
      "type": "string",
      "defaultValue": "s362_User_Tier2_Test_slgmac_W2",
      "metadata": { "description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },
    "subnet362NSG": {
      "type": "string",
      "defaultValue": "362_NSG_User_Tier2",
      "metadata": { "description": "NSG: Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices" }
    },	
"subnet410Prefix": { "type":  "string", "defaultValue":  "10.128.104.0/25", "metadata":  {"description": "HTTP and HTTPS services"}},	"subnet410Name": { "type":  "string", "defaultValue":  "s410_Web_Dev_slgmac_W2", "metadata":  {"description": "HTTP and HTTPS services"}},		"subnet410NSG": { "type": "string", "defaultValue": "410_NSG_Web", "metadata": {"description": "NSG: HTTP and HTTPS services"}},	
"subnet415Prefix": { "type":  "string", "defaultValue":  "10.128.104.128/25", "metadata":  {"description": "Loadbalanced HTTP and HTTPS Services"}},	"subnet415Name": { "type":  "string", "defaultValue":  "s415_LB_Web_Dev_slgmac_W2", "metadata":  {"description": "Loadbalanced HTTP and HTTPS Services"}},		"subnet415NSG": { "type": "string", "defaultValue": "415_NSG_LB_Web", "metadata": {"description": "NSG: Loadbalanced HTTP and HTTPS Services"}},	
"subnet420Prefix": { "type":  "string", "defaultValue":  "10.128.105.0/25", "metadata":  {"description": "Web Services, OEM applications"}},	"subnet420Name": { "type":  "string", "defaultValue":  "s420_App_Dev_slgmac_W2", "metadata":  {"description": "Web Services, OEM applications"}},		"subnet420NSG": { "type": "string", "defaultValue": "420_NSG_App", "metadata": {"description": "NSG: Web Services, OEM applications"}},	
"subnet425Prefix": { "type":  "string", "defaultValue":  "10.128.105.128/25", "metadata":  {"description": "Loadbalaned Web Services, OEM applications"}},	"subnet425Name": { "type":  "string", "defaultValue":  "s425_LB_App_Dev_slgmac_W2", "metadata":  {"description": "Loadbalaned Web Services, OEM applications"}},		"subnet425NSG": { "type": "string", "defaultValue": "425_NSG_LB_App", "metadata": {"description": "NSG: Loadbalaned Web Services, OEM applications"}},	
"subnet430Prefix": { "type":  "string", "defaultValue":  "10.128.106.0/25", "metadata":  {"description": "Data for Applications"}},	"subnet430Name": { "type":  "string", "defaultValue":  "s430_DB_Dev_slgmac_W2", "metadata":  {"description": "Data for Applications"}},		"subnet430NSG": { "type": "string", "defaultValue": "430_NSG_DB", "metadata": {"description": "NSG: Data for Applications"}},	
"subnet435Prefix": { "type":  "string", "defaultValue":  "10.128.106.128/25", "metadata":  {"description": "Loadbalanced Databases"}},	"subnet435Name": { "type":  "string", "defaultValue":  "s435_LB_DB_Dev_slgmac_W2", "metadata":  {"description": "Loadbalanced Databases"}},		"subnet435NSG": { "type": "string", "defaultValue": "435_NSG_LB_DB", "metadata": {"description": "NSG: Loadbalanced Databases"}},	
"subnet450Prefix": { "type":  "string", "defaultValue":  "10.128.107.0/25", "metadata":  {"description": "Internet EndPoint Machines"}},	"subnet450Name": { "type":  "string", "defaultValue":  "s450_DMZ_Dev_slgmac_W2", "metadata":  {"description": "Internet EndPoint Machines"}},		"subnet450NSG": { "type": "string", "defaultValue": "450_NSG_DMZ", "metadata": {"description": "NSG: Internet EndPoint Machines"}},	
"subnet455Prefix": { "type":  "string", "defaultValue":  "10.128.107.128/25", "metadata":  {"description": "Loadbalaned Internet Endpoint systems"}},	"subnet455Name": { "type":  "string", "defaultValue":  "s455_LB_DMZ_Dev_slgmac_W2", "metadata":  {"description": "Loadbalaned Internet Endpoint systems"}},		"subnet455NSG": { "type": "string", "defaultValue": "455_NSG_LB_DMZ", "metadata": {"description": "NSG: Loadbalaned Internet Endpoint systems"}},	
"subnet460Prefix": { "type":  "string", "defaultValue":  "10.128.108.0/25", "metadata":  {"description": "Tier 0 - Direct Control of enterprise identities in the environment. Tier 0 includes accounts, groups, and other assets that have direct or indirect administrative control of the Active Directory forest, domains, or domain controllers, and all the assets in it. The security sensitivity of all Tier 0 assets is equivalent as they are all effectively in control of each other"}},	"subnet460Name" [...]
"subnet461Prefix": { "type":  "string", "defaultValue":  "10.128.108.128/25", "metadata":  {"description": "Tier 1 administrator - manage enterprise servers, services, and applications"}},	"subnet461Name": { "type":  "string", "defaultValue":  "s461_User_Tier1_Dev_slgmac_W2", "metadata":  {"description": "Tier 1 administrator - manage enterprise servers, services, and applications"}},		"subnet461NSG": { "type": "string", "defaultValue": "461_NSG_User_Tier1", "metadata": {"description": "NSG: Tie [...]
"subnet462Prefix": { "type":  "string", "defaultValue":  "10.128.109.0/25", "metadata":  {"description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator accounts have administrative control of a significant amount of business value that is hosted on user workstations and devices"}},	"subnet462Name": { "type":  "string", "defaultValue":  "s462_User_Tier2_Dev_slgmac_W2", "metadata":  {"description": "Tier 2 - Control of user workstations and devices. Tier 2 administrator a [...]

    /*in the metadata spreadsheet, select the Connection tab and filter on VNET201
    and select the columns with Template in the name grouped by color.*/
    "ConnectionNamecnct201": {
      "type": "string",
      "defaultValue": "Peering_mac_slg_HBI_To_Services_W2",
      "metadata": { "description": "Arbitrary name for the new connection between an Azure VNet and another network" }
    },
    "vnetNamecnct201": {
      "type": "string",
      "defaultValue": "vnet_hbi_w2",
      "metadata": { "description": "Azure VNET of the current location" }
    },
    "connectionType1cnct201": {
      "type": "string",
      "defaultValue": "Peering",
      "metadata": { "description": "The type of connection. For connecting to ExpressRoute circuits, the connectionType must be of type ExpressRoute. Other types are IPsec and Vnet2Vnet." }
    },
    "allowVNETAccesscnct201": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowFwdAccesscnct201": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "allowGWAccesscnct201": {
      "type": "bool",
      "defaultValue": false,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "useRemoteGatewaycnct201": {
      "type": "bool",
      "defaultValue": true,
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "peerVNETNamecnct201": {
      "type": "string",
      "defaultValue": "vnet_services_w2",
      "metadata": { "description": "The routing weight tells the protocol how expensive it is to route on this gateway." }
    },
    "rmtSubIDcnct201": {
      "type": "string",
      "defaultValue": "730f26b5-ebf5-4518-999f-0b4eb0cdc8f9",
      "metadata": { "description": "The subscription ID of the peer VNET." }
    },
    "rmtRGNamecnct201": {
      "type": "string",
      "defaultValue": "rg_vnet_services_w2",
      "metadata": { "description": "The resource group for the remote subscription VNET." }
    },
    "rmtConnectionNamecnct201": {
      "type": "string",
      "defaultValue": "",
      "metadata": { "description": "The name of the remote connection." }
    },
    "rmtLocationcnct201": {
      "type": "string",
      "defaultValue": "westus2",
      "metadata": { "description": "The name of the remote location." }
    }


  },
  "variables": {
    "apiVersion": "2015-06-15",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
  },

  "resources": [
    /*in the metadata spreadsheet, select the NSGRules tab and filter on VNET201
    and select the columns with Resources in the name grouped by color.*/
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet210NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "210_NSG_Web_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet215NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "215_NSG_LB_Web_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet220NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "220_NSG_App_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet225NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "225_NSG_LB_App_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet230NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "230_NSG_DB_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet235NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "235_NSG_LB_DB_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet250NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "250_NSG_DMZ_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet255NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "255_NSG_LB_DMZ_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet260NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "260_NSG_User_Tier0_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet261NSG')]",
      "location": "[resourceGroup().location]",
      "tags": { "displayName": "261_NSG_User_Tier1_W2" },
      "properties": {
        "securityRules": [
          {
            "name": "SSH.Inbound.Allow",
            "properties": {
              "description": "SSH.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP.Inbound.Allow",
            "properties": {
              "description": "RDP.Inbound.Allow",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          },
          {
            "name": "All_Internet.Inbound.Deny",
            "properties": {
              "description": "All_Internet.Inbound.Deny",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    },



    /*in the metadata spreadsheet, select the Subnet tab and filter on VNET201
    and select the columns with Resources in the name grouped by color.*/
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [],
      "tags": { "displayName": "AzureFoundation VNet Definition" },
      "properties": {
        "addressSpace": { "addressPrefixes": [ "[parameters('vnetAddressPrefix')]" ] },
        "subnets": [
          {
            "name": "[parameters('subnet210name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet210prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet210NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet215name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet215prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet215NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet220name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet220prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet220NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet225name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet225prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet225NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet230name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet230prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet230NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet235name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet235prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet235NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet250name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet250prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet250NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet255name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet255prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet255NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet260name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet260prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet260NSG'))]" }
            }
          },
          {
            "name": "[parameters('subnet261name')]",
            "properties": {
              "addressPrefix": "[parameters('subnet261prefix')]",
              "networkSecurityGroup": { "id": "[resourceID('Microsoft.Network/networkSecurityGroups', parameters('subnet261NSG'))]" }
            }
          }
        ],

        /*in the metadata spreadsheet, select the Connections tab and filter on VNET201
    and select the columns with Resources in the name grouped by color.*/
        "resources": [
          {
            "apiVersion": "2016-06-01",
            "type": "virtualNetworkPeerings",
            "name": "[parameters('ConnectionNamecnct201')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [ "[concat('/subscriptions/', parameters('rmtSubIDcnct201'), '/resourceGroups/', parameters('rmtRGNamecnct201'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct201'))]", "[concat('Microsoft.Networks/virtualNetworks/',parameters('vnetNamecnct201'))]" ],
            "comments": "Make sure you put these resources within the Resources of a VNET, like a subnet",
            "properties": {
              "allowVirtualNetworkAccess": "[parameters('allowVNETAccesscnct201')]",
              "allowForwardedTraffic": "[parameters('allowFwdAccesscnct201')]",
              "allowGatewayTransit": "[parameters('allowGWAccesscnct201')]",
              "useRemoteGateways": "[parameters('allowVNETAccesscnct201')]",
              "remoteVirtualNetwork": { "id": "[concat('/subscriptions/', parameters('rmtSubIDcnct201'), '/resourceGroups/', parameters('rmtRGNamecnct201'),'/providers/Microsoft.Network/virtualNetworks/',parameters('peerVNETNamecnct201'))]" }
            }
          }

        ],
        "dhcpOptions": { "dnsServers": [ "10.128.59.36" ] },
        "dependsOn": [
          /*Using the metadata template on the Subnet Tab, filter to VNET104 and select
          the columns with DependsOn and grouped by color*/
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet210NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet215NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet220NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet225NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet230NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet235NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet250NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet255NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet260NSG'))]",
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet261NSG'))]"

        ]

      }
    }

  ],



  "outputs": {
  }

}
